# cardano-wallet-agda

./: .gitignore  CONTRIBUTING.md  README.md  cabal.project  flake.nix  fourmolu.yaml  justfile
.buildkite/: pipeline.yml
.github/: PULL_REQUEST_TEMPLATE.md
lib/agda2hs-fixer/: CHANGELOG.md  agda2hs-fixer.cabal
lib/agda2hs-fixer/haskell/: agda2hs-fixer.hs
lib/agda2hs-fixer/haskell/Language/Agda2hs/: Documentation.hs
lib/agda2hs-fixer/haskell/Language/Agda2hs/Agda/: Parser.hs  Types.hs
lib/agda2hs-fixer/haskell/Language/Agda2hs/Agda/Parser/: ExportList.hs  Lexer.hs  Types.hs
lib/agda2hs-fixer/haskell/Language/Agda2hs/Haskell/: Parser.hs  Types.hs
lib/cardano-wallet-read/: cardano-wallet-read.cabal
lib/cardano-wallet-read/haskell/Cardano/Read/Ledger/Block/: SlotNo.hs
lib/cardano-wallet-read/haskell/Cardano/Wallet/: Read.hs
lib/cardano-wallet-read/haskell/Cardano/Wallet/Read/: Chain.hs  PParams.hs  Tx.hs
lib/cardano-wallet-read/haskell/Cardano/Wallet/Read/Chain/: Genesis.hs
lib/cardano-wallet-read/haskell/Cardano/Wallet/Read/Eras/: EraValue.hs
lib/cardano-wallet-read/haskell/Cardano/Wallet/Read/Tx/: CBOR.hs  CollateralInputs.hs  ScriptValidity.hs  TxId.hs  TxOut.hs
lib/customer-deposit-wallet-pure/: agda2hs-rewrites.yaml  customer-deposit-wallet-pure.agda-lib  customer-deposit-wallet-pure.cabal  generate-haskell.sh
lib/customer-deposit-wallet-pure/agda/: Everything.agda  Implementation.agda  Specification.lagda.md
lib/customer-deposit-wallet-pure/agda/Cardano/Wallet/: Read.agda
lib/customer-deposit-wallet-pure/agda/Cardano/Wallet/Address/: BIP32.agda  BIP32_Ed25519.agda  Encoding.agda  Hash.agda
lib/customer-deposit-wallet-pure/agda/Cardano/Wallet/Address/BIP32_Ed25519/: Encrypted.agda
lib/customer-deposit-wallet-pure/agda/Cardano/Wallet/Deposit/: Everything.agda  Implementation.agda  Pure.agda  Read.agda
lib/customer-deposit-wallet-pure/agda/Cardano/Wallet/Deposit/Pure/: Address.agda  Balance.agda  DeltaUTxO.agda  Experimental.agda  RollbackWindow.agda  Timeline.agda  TxHistory.agda  TxSummary.agda  UTxO.agda  ValueTransfer.agda
lib/customer-deposit-wallet-pure/agda/Cardano/Wallet/Deposit/Read/: Temp.agda  Value.agda
lib/customer-deposit-wallet-pure/agda/Cardano/Wallet/Read/: Address.agda  Block.agda  Chain.agda  Eras.agda  Tx.agda  Value.agda
lib/customer-deposit-wallet-pure/agda/Cardano/Write/Tx/: Balance.agda
lib/customer-deposit-wallet-pure/agda/Data/: Function.agda  List.agda  Map.agda
lib/customer-deposit-wallet-pure/agda/Data/Function/: Law.agda
lib/customer-deposit-wallet-pure/agda/Data/List/: Law.agda
lib/customer-deposit-wallet-pure/agda/Data/Maps/: InverseMap.agda  Maybe.agda  PairMap.agda  Timeline.agda
lib/customer-deposit-wallet-pure/agda/Data/Maybe/: Extra.agda
lib/customer-deposit-wallet-pure/agda/Haskell/: Reasoning.agda  Reasoning.lagda.md
lib/customer-deposit-wallet-pure/agda/Haskell/Cardano/Crypto/: Wallet.agda
lib/customer-deposit-wallet-pure/agda/Haskell/Cardano/Crypto/Hash/: Monomorphic.agda
lib/customer-deposit-wallet-pure/agda/Haskell/Cardano/Crypto/Wallet/: Extra.agda
lib/customer-deposit-wallet-pure/agda/Haskell/Cardano/Wallet/Read/: Address.agda  Block.agda  Chain.agda  Tx.agda  Value.agda
lib/customer-deposit-wallet-pure/agda/Haskell/Crypto/: Hash.agda
lib/customer-deposit-wallet-pure/agda/Haskell/Data/: ByteString.agda  InverseMap.agda  List.agda  Map.agda  Maybe.agda  Set.agda  Word.agda
lib/customer-deposit-wallet-pure/agda/Haskell/Data/ByteString/: Short.agda
lib/customer-deposit-wallet-pure/agda/Haskell/Data/List/: Prop.agda
lib/customer-deposit-wallet-pure/agda/Haskell/Data/Map/: Def.agda  Law.agda
lib/customer-deposit-wallet-pure/agda/Haskell/Data/Maps/: InverseMap.agda  Maybe.agda  PairMap.agda  Timeline.agda
lib/customer-deposit-wallet-pure/agda/Haskell/Data/Set/: Def.agda  Law.agda
lib/customer-deposit-wallet-pure/agda/Haskell/Data/Word/: Odd.agda
lib/customer-deposit-wallet-pure/agda/Haskell/Reasoning/: Bool.agda  Core.lagda.md  Ord.agda
lib/customer-deposit-wallet-pure/agda/Specification/: Cardano.lagda.md  Common.lagda.md  Value.lagda.md
lib/customer-deposit-wallet-pure/agda/Specification/Cardano/: Chain.lagda.md  Tx.lagda.md  Value.lagda.md
lib/customer-deposit-wallet-pure/agda/Specification/Wallet/: Payment.lagda.md  UTxO.lagda.md
lib/customer-deposit-wallet-pure/haskell/: Everything.hs
lib/customer-deposit-wallet-pure/haskell/Cardano/Crypto/Hash/: Monomorphic.hs
lib/customer-deposit-wallet-pure/haskell/Cardano/Crypto/Wallet/: Extra.hs
lib/customer-deposit-wallet-pure/haskell/Cardano/Wallet/: Read.hs
lib/customer-deposit-wallet-pure/haskell/Cardano/Wallet/Address/: BIP32.hs  BIP32_Ed25519.hs  Encoding.hs  Hash.hs
lib/customer-deposit-wallet-pure/haskell/Cardano/Wallet/Deposit/: Everything.hs  Pure.hs  Read.hs
lib/customer-deposit-wallet-pure/haskell/Cardano/Wallet/Read/: Address.hs  Block.hs  Chain.hs  Eras.hs  Tx.hs  Value.hs
lib/customer-deposit-wallet-pure/haskell/Cardano/Write/Tx/: Balance.hs
lib/customer-deposit-wallet-pure/haskell/Data/Function/: Law.hs
lib/customer-deposit-wallet-pure/haskell/Data/List/: Law.hs
lib/customer-deposit-wallet-pure/haskell/Data/Map/: Law.hs
lib/customer-deposit-wallet-pure/haskell/Data/Maps/: InverseMap.hs  Maybe.hs  PairMap.hs  Timeline.hs
lib/customer-deposit-wallet-pure/haskell/Data/Maybe/: Extra.hs
lib/customer-deposit-wallet-pure/haskell/Haskell/Cardano/Crypto/: Wallet.hs
lib/customer-deposit-wallet-pure/haskell/Haskell/Crypto/: Hash.hs
lib/customer-deposit-wallet-pure/haskell/Haskell/Data/: ByteString.hs  InverseMap.hs  List.hs  Map.hs  Maybe.hs  Set.hs  Word.hs
lib/customer-deposit-wallet-pure/haskell/Haskell/Data/ByteString/: Short.hs
lib/customer-deposit-wallet-pure/haskell/Haskell/Data/Map/: Def.hs  Law.hs
lib/customer-deposit-wallet-pure/haskell/Haskell/Data/Maps/: InverseMap.hs  Maybe.hs  PairMap.hs  Timeline.hs
lib/customer-deposit-wallet-pure/haskell/Haskell/Data/Set/: Def.hs  Law.hs
lib/customer-deposit-wallet-pure/haskell/Haskell/Data/Word/: Odd.hs
(+49 files in other folders)
