cabal-version:      3.0
name:               customer-deposit-wallet-pure
build-type:         Simple
version:            0.1.0.0
synopsis:           A wallet for the Cardano blockchain.
description:        Please see README.md
homepage:           https://github.com/cardano-foundation/cardano-wallet-agda
license:            Apache-2.0
license-file:       LICENSE
author:             HAL, Cardano Foundation
maintainer:         hal@cardanofoundation.org
copyright:          2023-24 Cardano Foundation
category:           Web

extra-doc-files:
  CHANGELOG.md
extra-source-files:
  generate-haskell.sh
  customer-deposit-wallet-pure.agda-lib
  agda/**/*.agda


common language
  default-language:
    Haskell2010
  default-extensions:
    OverloadedStrings

common opts-lib
  ghc-options:
    -Wall -Wcompat
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wno-redundant-constraints
    -Wno-unused-matches
    -Wno-unused-imports

  if flag(release)
    ghc-options: -O2 -Werror

common opts-exe
  import:      opts-lib
  ghc-options: -threaded -rtsopts

flag release
  description: Enable optimization and `-Werror`
  default:     False
  manual:      True

library
  import:          language, opts-lib
  hs-source-dirs:
    haskell
  build-depends:
    , base >= 4.14.3.0 && < 4.20
    , bytestring >= 0.10.12.0 && < 0.13
    , cardano-crypto >= 1.1.2 && < 1.2
    , containers >= 0.6.6 && < 0.8
    , deepseq >= 1.4.4 && < 1.6
    , text >= 1.2.4.1 && < 2.2
    , OddWord >= 1.0.1.1 && < 1.1
  exposed-modules:
    Cardano.Wallet.Address.BIP32_Ed25519
    Cardano.Wallet.Deposit.Pure
    Cardano.Wallet.Deposit.Pure.Address
    Cardano.Wallet.Deposit.Pure.UTxO.DeltaUTxO
    Cardano.Wallet.Deposit.Pure.UTxO.Tx
    Cardano.Wallet.Deposit.Pure.UTxO.UTxO
    Cardano.Wallet.Deposit.Pure.UTxO.ValueTransfer
    Cardano.Wallet.Deposit.Pure.Timeline
    Cardano.Wallet.Deposit.Pure.TxSummary
    Cardano.Wallet.Deposit.Read
    Cardano.Write.Tx.Balance
  other-modules:
    Haskell.Data.ByteString
    Haskell.Data.Map
    Haskell.Data.Maybe
    Haskell.Data.Set
    Haskell.Data.Word
    Haskell.Data.Word.Odd
    Haskell.Crypto.Hash
