cabal-version:      3.0
name:               customer-deposit-wallet-pure
build-type:         Simple
version:            0.1.0.0
synopsis:           A wallet for the Cardano blockchain.
description:        Please see README.md
homepage:           https://github.com/cardano-foundation/cardano-wallet-agda
license:            Apache-2.0
license-file:       LICENSE
author:             HAL, Cardano Foundation
maintainer:         hal@cardanofoundation.org
copyright:          2023-24 Cardano Foundation
category:           Web

extra-doc-files:
  CHANGELOG.md
extra-source-files:
  generate-haskell.sh
  customer-deposit-wallet-pure.agda-lib
  agda/**/*.agda
  agda/**/*.lagda.md

common language
  default-language:
    Haskell2010
  default-extensions:
    OverloadedStrings

common opts-lib
  ghc-options:
    -Wall -Wcompat
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wno-redundant-constraints
    -Wno-unused-matches
    -Wno-unused-imports

  if flag(release)
    ghc-options: -O2 -Werror

common opts-exe
  import:      opts-lib
  ghc-options: -threaded -rtsopts

flag release
  description: Enable optimization and `-Werror`
  default:     False
  manual:      True

library
  import:          language, opts-lib
  hs-source-dirs:
    haskell
  build-depends:
    , base
    , bytestring
    , cardano-crypto
    , cardano-crypto-class
    , cardano-wallet-read == 0.2024.8.27
    , containers
    , deepseq
    , text
    , OddWord
  exposed-modules:
    Cardano.Wallet.Address.BIP32
    Cardano.Wallet.Address.BIP32_Ed25519
    Cardano.Wallet.Address.Encoding
    Cardano.Wallet.Address.Hash
    Cardano.Wallet.Deposit.Pure.Experimental
    Cardano.Wallet.Deposit.Pure.Address
    Cardano.Wallet.Deposit.Pure.RollbackWindow
    Cardano.Wallet.Deposit.Pure.UTxO.DeltaUTxO
    Cardano.Wallet.Deposit.Pure.UTxO.Tx
    Cardano.Wallet.Deposit.Pure.UTxO.UTxO
    Cardano.Wallet.Deposit.Pure.UTxO.UTxOHistory
    Cardano.Wallet.Deposit.Pure.UTxO.UTxOHistory.Core
    Cardano.Wallet.Deposit.Pure.UTxO.UTxOHistory.Type
    Cardano.Wallet.Deposit.Pure.UTxO.ValueTransfer
    Cardano.Wallet.Deposit.Pure.TxHistory
    Cardano.Wallet.Deposit.Pure.TxHistory.Core
    Cardano.Wallet.Deposit.Pure.TxHistory.Type
    Cardano.Wallet.Deposit.Pure.TxSummary
    Cardano.Wallet.Deposit.Read.Temp
    Cardano.Write.Tx.Balance
    Data.Maps.Timeline
  other-modules:
    Haskell.Data.ByteString
    Haskell.Data.ByteString.Short
    Haskell.Data.List
    Haskell.Data.Map
    Haskell.Data.Maps.Maybe
    Haskell.Data.Maps.InverseMap
    Haskell.Data.Maps.PairMap
    Haskell.Data.Maps.Timeline
    Haskell.Data.Maybe
    Haskell.Data.Set
    Haskell.Data.Word
    Haskell.Data.Word.Odd
