cabal-version:      3.0
name:               customer-deposit-wallet-pure
build-type:         Simple
version:            0.1.0.0
synopsis:           A wallet for the Cardano blockchain.
description:        Please see README.md
homepage:           https://github.com/cardano-foundation/cardano-wallet-agda
license:            Apache-2.0
license-file:       LICENSE
author:             HAL, Cardano Foundation
maintainer:         hal@cardanofoundation.org
copyright:          2023-25 Cardano Foundation
category:           Web

extra-doc-files:
  CHANGELOG.md
extra-source-files:
  generate-haskell.sh
  customer-deposit-wallet-pure.agda-lib
  agda/**/*.agda
  agda/**/*.lagda.md

common language
  default-language:
    Haskell2010
  default-extensions:
    OverloadedStrings

common opts-lib
  ghc-options:
    -Wall -Wcompat
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wno-redundant-constraints
    -Wno-unused-matches
    -Wno-unused-imports

  if flag(release)
    ghc-options: -O2 -Werror

common opts-exe
  import:      opts-lib
  ghc-options: -threaded -rtsopts

flag release
  description: Enable optimization and `-Werror`
  default:     False
  manual:      True

library
  import:          language, opts-lib
  hs-source-dirs:
    haskell
  build-depends:
    , base >= 4.14 && < 5
    , bytestring >= 0.10 && < 0.13
    , cardano-crypto >= 1.1.2 && < 1.2
    , cardano-crypto-class >= 2.1.5.0 && < 2.2
    , cardano-wallet-read >= 1.0.0.0 && < 1.1
    , containers >= 0.5 && < 0.8
    , deepseq >= 1.4.8.1 && < 1.6
    , text >= 1.2 && < 2.2
    , OddWord == 1.0.1.1
    -- newer version of OddWord has constrained base < 4.16
  exposed-modules:
    Cardano.Crypto.Hash.Monomorphic
    Cardano.Wallet.Address.BIP32
    Cardano.Wallet.Address.BIP32_Ed25519
    Cardano.Wallet.Address.BIP32_Ed25519.Encrypted
    Cardano.Wallet.Address.Encoding
    Cardano.Wallet.Deposit.Pure.Experimental
    Cardano.Wallet.Deposit.Pure.Address
    Cardano.Wallet.Deposit.Pure.RollbackWindow
    Cardano.Wallet.Deposit.Pure.UTxO.DeltaUTxO
    Cardano.Wallet.Deposit.Pure.UTxO.Tx
    Cardano.Wallet.Deposit.Pure.UTxO.UTxO
    Cardano.Wallet.Deposit.Pure.UTxO.UTxOHistory
    Cardano.Wallet.Deposit.Pure.UTxO.UTxOHistory.Core
    Cardano.Wallet.Deposit.Pure.UTxO.UTxOHistory.Timeline
    Cardano.Wallet.Deposit.Pure.UTxO.UTxOHistory.Type
    Cardano.Wallet.Deposit.Pure.UTxO.ValueTransfer
    Cardano.Wallet.Deposit.Pure.TxHistory
    Cardano.Wallet.Deposit.Pure.TxHistory.Core
    Cardano.Wallet.Deposit.Pure.TxHistory.Type
    Cardano.Wallet.Deposit.Pure.TxSummary
    Cardano.Wallet.Deposit.Read.Temp
    Cardano.Write.Tx.Balance
    Data.Function.Law
    Data.List.Law
    Data.Maps.InverseMap
    Data.Maps.PairMap
    Data.Maps.Timeline
    Data.Maybe.Extra
  other-modules:
    Cardano.Crypto.Wallet.Extra
    Cardano.Wallet.Deposit.Pure.Address.Customer
    Data.Maps.Maybe
